--- a/Javascript2/styles.css
+++ b/Javascript2/styles.css
@@ -1,4 +1,5 @@
-/* Allyvia Holland Project 1 */
+/* Allyvia Holland Project 1 07-15-25 */
+/* Based on Javascript 30 projects */
 /* Light and dark theme variables using :root and .dark body class */
 /* Added styling for tick marks and upright clock numbers */
 /* Responsive layout adjustments using media query */ 
