--- a/Javascript3/style.css
+++ b/Javascript3/style.css
@@ -1,4 +1,5 @@
-/*Allyvia Holland Javacript 3 */ 
+/*Allyvia Holland Javacript 3 07-15-25*/ 
+/* Based on Javascript 30 projects */
 /* Made .voiceinator responsive with max-width and % scaling */
 /* Styled form elements with consistent spacing and modern input styles */
 /* Styled the heading with text-shadow and custom font (Pacifico) */
